--- a/index.html
+++ b/index.html
@@ -38,11 +38,33 @@
     </picture>
   </div>
   <section class="description">
-    <div class="manual">
-      <img src="img/manual-1.png" alt="manual 1">
+    <div class="pc">
+      <div class="manual">
+        <img src="img/manual-1.png" alt="manual 1">
+      </div>
+      <div class="manual">
+        <img src="img/manual-2.png" alt="manual 2">
+      </div>
     </div>
-    <div class="manual">
-      <img src="img/manual-2.png" alt="manual 2">
+    <div class="sp">
+      <div class="manual">
+        <img src="img/manual-sp1.png" alt="manual 1">
+      </div>
+      <div class="manual">
+        <img src="img/manual-sp2.png" alt="manual 1">
+      </div>
+      <div class="manual">
+        <img src="img/manual-sp3.png" alt="manual 1">
+      </div>
+      <div class="manual">
+        <img src="img/manual-sp4.png" alt="manual 1">
+      </div>
+      <div class="manual">
+        <img src="img/manual-sp5.png" alt="manual 1">
+      </div>
+      <div class="manual">
+        <img src="img/manual-sp6.png" alt="manual 1">
+      </div>
     </div>
   </section>
   <iframe frameborder="0" height="480" width="320" src="https://akihirokato.official.ec/items/38905788/widget/large" ></iframe>
