add ogp description

--- a/index.html
+++ b/index.html
@@ -12,9 +12,10 @@
   </script>
   <meta charset="utf-8">
   <title>BAIS | Akihiro Kato</title>
-  <meta name="description" content="「BAIS」は人とAIが手をとり合う街、BAIS CITYの市民となるボードゲーム作品です。">
+  <meta name="description" content="「BAIS」は人とAIが手をとり合う街、BAIS CITYの市民を体験するボードゲーム作品です。">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta property="og:title" content="BAIS | Akihiro Kato">
+  <meta property="og:description" content="「BAIS」は人とAIが手をとり合う街、BAIS CITYの市民を体験するボードゲーム作品です。">
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://bais.city">
   <meta property="og:image" content="https://bais.city/img/ogp.png">
