--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <meta property="og:description" content="「BAIS」は人とAIが手をとり合う街、BAIS CITYの市民を体験するボードゲーム作品です。">
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://bais.city">
-  <meta property="og:image" content="https://bais.city/img/ogp.png">
+  <meta property="og:image" content="img/ogp.png">
   <meta name="twitter:card" content="summary_large_image" />
   <link rel="manifest" href="site.webmanifest">
   <link rel="stylesheet" href="css/normalize.css">
