--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!doctype html>
-<html class="no-js" lang="">
-
+<html class="no-js" lang="en">
 <head>
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-ELFZL03475"></script>
@@ -21,55 +20,149 @@
   <meta property="og:image" content="https://bais.city/img/ogp.png">
   <meta name="twitter:card" content="summary_large_image" />
   <link rel="manifest" href="site.webmanifest">
-  <link rel="stylesheet" href="css/normalize.css">
-  <link rel="stylesheet" href="css/main.css">
-  <link rel="preconnect" href="https://fonts.gstatic.com">
-  <link href="https://fonts.googleapis.com/css2?family=Heebo&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@300;500&display=swap" rel="stylesheet">
   <meta name="theme-color" content="#fafafa">
-  <link rel="icon" type="image/png" href="icon.png">
+  <link rel="icon" type="image/png" href="./icon.png">
+  <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="./css/main.scss">
 </head>
-
 <body>
-<main class="container">
-  <div class="main-visual">
-    <picture>
-      <source media="(min-width: 650px)" srcset="img/thumbnail.jpg">
-      <img src="img/thumbnail-1x1.jpg" alt="BAIS">
-    </picture>
-  </div>
-  <section class="description">
-    <div class="pc">
-      <div class="manual">
-        <img src="img/manual-1.png" alt="manual 1">
+<main>
+  <section class="heroSection">
+    <div class="heroSection__main">
+      <img src="./img/top.jpg" alt="BAIS">
+    </div>
+    <div class="heroSection__scroll">
+      <p>welcome!</p>
+    </div>
+  </section>
+  <section class="welcomeSection">
+    <h2 class="mb-16 text-center text-6xl">ようこそ、BAIS CITYへ。</h2>
+    <p class="mb-6 text-center text-lg leading-8">新しい市民のみなさま、こんにちは。 <br>ここは人とAIが手を取り合う都市、BAIS CITYです。</p>
+    <p class="text-center text-lg leading-8">この都市に市長はいません。<br>都市の運営は、市民のみなさまが直接都市計画をすることによって保たれます。</p>
+  </section>
+  <section class="aboutSection">
+    <div class="aboutSection__bais container mx-auto">
+      <h3><b>B</b>lockchain <b>A</b>rtificial <b>I</b>ntelligence <b>S</b>ystem</h3>
+      <p class="mt-5 mb-6 text-base leading-8">
+        BAIS(Blockchain Artifitial Intelligence System)は、ブロックチェーンによる分散性と、<br>
+        AIによる集権性を両立した、BAIS CITYの根幹を担う新しいシステムです。<br>
+        このシステムを利用しBAIS CITYでは、非中央集権型都市の運営を実現しています。
+      </p>
+      <img src="./img/about-bais.png" alt="flow">
+    </div>
+    <div class="aboutSection__citizens container mx-auto flex">
+      <div class="aboutSection__citizensText">
+        <h3 class="mb-6">より良い市民になるには</h3>
+        <p class="text-base leading-8">
+          市民は自由に都市計画をし、BAISに提案ができます。<br>
+          提案した都市計画は条例に基づき採点され、採点結果から市民の順位付けが行われます。<br>
+          条例に沿った提案をすることで、より高い点数を獲得することができます。
+        </p>
+        <p class="mt-6 text-base leading-8">
+          市民から都市計画が提案されると、AIからも市民に条例が提案されます。<br>
+          提案された条例の承認/非承認を市民が判断し、BAIS CITY全体の条例をアップデートし続けます。<br>
+          条例が変化することで、市民の順位も常に変動し続けます。<br>
+          より良い市民になるためには、BAIS CITYの条例に沿った提案をし続けることが重要です。
+        </p>
       </div>
-      <div class="manual">
-        <img src="img/manual-2.png" alt="manual 2">
+      <div class="aboutSection__citizensImage">
+        <img src="./img/about-citizen.png" alt="citizens">
       </div>
     </div>
-    <div class="sp">
-      <div class="manual">
-        <img src="img/manual-sp1.png" alt="manual 1">
+    <div class="aboutSection__city container mx-auto flex flex-row-reverse">
+      <div class="aboutSection__cityText">
+        <h3 class="mb-6">より良い都市を目指して</h3>
+        <p class="text-base leading-8">
+          点数にこだわらず理想の都市計画をするのか、<br>
+          高得点を目指し条例に基づいた提案をするのかは、あなたの自由です。<br>
+          さあ、早速市民登録をして、BAIS CITYの運営に参加しましょう。
+        </p>
+        <p class="mt-6 text-sm">
+          メッセージアプリ「LINE」が必要です。QRもしくはIDからAI「BAIS」をLINEで友達登録をすることで市民の登録が完了します。（ID:@314icmkq）
+        </p>
+        <img class="mt-6" src="./img/bais-qr.png" alt="QR">
       </div>
-      <div class="manual">
-        <img src="img/manual-sp2.png" alt="manual 1">
-      </div>
-      <div class="manual">
-        <img src="img/manual-sp3.png" alt="manual 1">
-      </div>
-      <div class="manual">
-        <img src="img/manual-sp4.png" alt="manual 1">
-      </div>
-      <div class="manual">
-        <img src="img/manual-sp5.png" alt="manual 1">
-      </div>
-      <div class="manual">
-        <img src="img/manual-sp6.png" alt="manual 1">
+      <div class="aboutSection__cityImage">
+        <img src="./img/about-city.png" alt="city">
       </div>
     </div>
   </section>
-  <iframe frameborder="0" height="480" width="320" src="https://akihirokato.official.ec/items/38905788/widget/large" ></iframe>
+  <section class="howtoSection container mx-auto">
+    <h2 class="text-center">How To Play BAIS</h2>
+    <div class="howtoSection__planning flex">
+      <div class="howtoSection__planningText">
+        <h3 class="mb-4 grid justify-items-end">City Planning</h3>
+        <p class="text-base leading-8">
+          市民登録が完了したら、既存のBAIS市民により現在制定されている条例を尋ねましょう。条例に違反しないように建物を配置し、完成した都市計画を上から撮影してBAISに送りましょう。
+        </p>
+      </div>
+      <div class="howtoSection__planningWrap">
+        <img class="howtoSection__planningPhoto" src="./img/howto-photo-1.jpg" alt="city planning">
+      </div>
+    </div>
+    <div class="howtoSection__calculation flex flex-row-reverse">
+      <div class="howtoSection__calculationText">
+        <h3 class="mb-4">AI Calculation</h3>
+        <p class="text-base leading-8">
+          市民の提案した都市計画はブロックチェーンに記録され、記録された都市計画をAIが条例をもとに採点し、採点結果による順位を市民に返します。<br>
+          集まった都市計画から市民の求める市政を予測し、AIは新しい条例を提案します。
+        </p>
+      </div>
+      <div class="howtoSection__calculationWrap">
+        <img class="howtoSection__calculationPhoto" src="./img/howto-photo-2.jpg" alt="ai calculation">
+      </div>
+    </div>
+    <div class="howtoSection__judgement flex">
+      <div class="howtoSection__judgementText">
+        <h3 class="mb-4 grid justify-items-end">Judgement</h3>
+        <p class="text-base leading-8">
+          条例は都市計画を提案した市民によって承認/非承認が決定されます。<br>
+          承認されると次の都市計画時に市民が守る新たな条例として設定され、すべての市民に通知されます。
+        </p>
+      </div>
+      <div class="howtoSection__judgementWrap">
+        <img class="howtoSection__judgementPhoto" src="./img/howto-photo-3.jpg" alt="judgement">
+      </div>
+    </div>
+    <p class="howtoSection__future text-center text-2xl text-gray-500">
+      あなたの選択により、BAISの未来が変わります。<br>
+      新時代の直接民主主義を実現する画期的な都市を、<br>
+      共に作り出していきましょう。
+    </p>
+    <hr>
+  </section>
+  <section class="storeSection flex justify-center items-center">
+    <div>
+      <iframe frameborder="0" height="480" width="320" src="https://akihirokato.official.ec/items/38905788/widget/large" ></iframe>
+    </div>
+    <div class="pl-16">
+      <a href="https://akihirokato.official.ec/items/38905788"
+         class="inline-block transition hover:shadow-md text-lg py-3 px-6 rounded shadow border border-solid border-gray-600"
+         target="_blank"
+      >ご購入はこちら</a>
+      <p class="text-xs text-gray-600 mt-8 mb-3">ArtSticker</p>
+      <a href="https://artsticker.app/share/works/detail/17245"
+         class="inline-block transition hover:shadow-md text-lg py-3 px-6 rounded shadow border border-solid border-gray-600"
+         target="_blank"
+      >作家の支援はこちら</a>
+    </div>
+  </section>
+  <section class="creditSection flex justify-center mt-16">
+    <div>
+      <h3>Credit</h3>
+      <p>Produced by <a href="https://akihirokato.com">Akihiro Kato</a></p>
+    </div>
+  </section>
 </main>
+<footer class="container mx-auto">
+  <ul class="flex justify-center mt-20">
+    <li class="mr-4"><a href="https://twitter.com/croe_c" target="_blank"><img src="./img/twitter.svg" alt="Twitter"></a></li>
+    <li class="mr-4"><a href="https://www.facebook.com/4kihiro" target="_blank"><img src="./img/facebook.svg" alt="Facebook"></a></li>
+    <li class="mr-4"><a href="https://www.instagram.com/croea/" target="_blank"><img src="./img/instagram.svg" alt="Instagram"></a></li>
+    <li><a href="mailto:info@drawcircle.jp"><img src="./img/mail.svg" alt="Mail"></a></li>
+  </ul>
+  <p class="text-center my-16">&copy;BAIS</p>
+</footer>
 <script src="js/vendor/modernizr-3.11.2.min.js"></script>
 <script src="js/plugins.js"></script>
 <script src="js/main.js"></script>
