--- a/index.html
+++ b/index.html
@@ -124,7 +124,10 @@
         <img class="howtoSection__judgementPhoto" src="./img/howto-photo-3.jpg" alt="judgement">
       </div>
     </div>
-    <p class="howtoSection__future text-center text-2xl text-gray-500">
+    <div class="howtoSection__judgementImage flex justify-center">
+      <img src="./img/howto-judgement.png" alt="x or o">
+    </div>
+    <p class="howtoSection__future text-center text-2xl text-gray-500 leading-10">
       あなたの選択により、BAISの未来が変わります。<br>
       新時代の直接民主主義を実現する画期的な都市を、<br>
       共に作り出していきましょう。
